# ledger-app-ergo

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  ledger_app.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: cflite_cron.yml  cflite_pr.yml  ci-workflow.yml  codeql-workflow.yml  lint-workflow.yml
doc/: INS-20-ATTEST-BOX.md
fuzzing/: CMakeLists.txt  README.md
fuzzing/include/: glyphs.h
fuzzing/src/: ainpt_harness.c  da_harness.c  epk_harness.c  stx_harness.c
fuzzing/src/utils/: crc32.c  glyphs.c  os_mocks.c
src/: app_main.c  constants.h  context.c  context.h  main.c
src/commands/attestinput/: ainpt_response.c  ainpt_ui_bagl.c  ainpt_ui_nbgl.c
src/commands/deriveaddress/: da_ui.h  da_ui_bagl.c  da_ui_nbgl.c
src/commands/extpubkey/: epk_ui_bagl.c  epk_ui_nbgl.c
src/commands/signtx/: stx_ui.h  stx_ui_bagl.c  stx_ui_common.c  stx_ui_common.h  stx_ui_nbgl.c
src/commands/signtx/operations/: stx_op_p2pk.c  stx_op_p2pk.h
src/common/: bip32_ext.c
src/crypto/: ergo.c  ergo.h
src/ergo/: ergo_tree.c  schnorr.c
src/helpers/: sw_result.h
src/ui/: display.c  display.h  ui_application_id.h  ui_application_id_bagl.c  ui_application_id_nbgl.c  ui_approve_reject.c  ui_approve_reject.h  ui_approve_reject_nbgl.c  ui_bip32_path.h  ui_bip32_path_bagl.c  ui_bip32_path_nbgl.c  ui_dynamic_flow.c  ui_dynamic_flow.h  ui_dynamic_flow_nbgl.c  ui_menu.h  ui_menu_bagl.c  ui_menu_nbgl.c  ui_sign_reject.c  ui_sign_reject.h
tests/: README.md  basic-tests.js  conftest.py  package.json  requirements.txt  test_attest_input.py  test_attest_input_with_auth_token.py  test_can_blind_sign_tx.py  test_can_blind_sign_tx_with_auth_token.py  test_can_derive_address.py  test_can_derive_address_with_auth_token.py  test_can_get_extended_public_key.py  test_can_get_extended_public_key_with_auth_token.py  test_can_not_sign_tx_zero_inputs.py  test_can_not_sign_tx_zero_inputs_with_auth_token.py  test_can_not_sign_tx_zero_outputs.py  test_can_not_sign_tx_zero_outputs_with_auth_token.py  test_can_show_address.py  test_can_show_address_with_auth_token.py  test_can_sign_tx.py  test_can_sign_tx_additional_regs.py  test_can_sign_tx_additional_regs_with_auth_token.py  test_can_sign_tx_burned_tokens.py  test_can_sign_tx_burned_tokens_with_auth_token.py  test_can_sign_tx_change22.py  test_can_sign_tx_change22_with_auth_token.py  test_can_sign_tx_few_token_ids.py  test_can_sign_tx_few_token_ids_with_auth.py  test_can_sign_tx_minted_tokens.py  test_can_sign_tx_minted_tokens_with_auth_token.py  test_can_sign_tx_with_auth_token.py  test_can_sign_tx_with_tokens.py  test_can_sign_tx_with_tokens_with_auth.py  test_can_sign_tx_zero_data_inputs.py  test_can_sign_tx_zero_data_inputs_with_auth_token.py  test_fetch_name.py  test_fetch_version.py  test_flow_main.py  transaction-tests.js  usage.md  (+1 more)
tests/application_client/: ergo_command_sender.py  ergo_response_unpacker.py
tests/helpers/: account.py  attested_box.py  core.py  data.js  data.py  ergo_reader.py  ergo_writer.py  extended_address.py  flow.js  hooks.js  miner_address.py  nav_helper.py  screen.js  tx_builder.py  unsigned_box.py
unit-tests/utils/: base58.c  bip32.c  bip32.h  blake2-impl.h  blake2b-ref.h  cx.c  cx.h  macro_helpers.h  read.c  write.c
